--- a/package.json
+++ b/package.json
@@ -8,20 +8,27 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "build:lambda": "cross-env NODE_ENV=local node build.js --watch"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.142",
     "@types/jest": "^29.5.12",
     "@types/node": "20.14.2",
+    "aws-cdk": "2.147.3",
+    "cross-env": "^7.0.3",
+    "esbuild-plugin-tsc": "^0.4.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.4",
-    "aws-cdk": "2.147.3",
     "ts-node": "^10.9.2",
     "typescript": "~5.4.5"
   },
   "dependencies": {
     "aws-cdk-lib": "2.147.3",
+    "aws-lambda": "^1.0.7",
     "constructs": "^10.0.0",
+    "esbuild": "^0.23.0",
+    "fast-glob": "^3.3.2",
     "source-map-support": "^0.5.21"
   }
 }
