--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "demo-localstack",
+  "name": "demo",
   "version": "0.1.0",
-  "bin": {
-    "demo-localstack": "bin/demo-localstack.js"
-  },
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
@@ -30,5 +31,6 @@
     "esbuild": "^0.23.0",
     "fast-glob": "^3.3.2",
     "source-map-support": "^0.5.21"
-  }
+  },
+  "packageManager": "pnpm@9.1.4+sha512.9df9cf27c91715646c7d675d1c9c8e41f6fce88246f1318c1aa6a1ed1aeb3c4f032fcdf4ba63cc69c4fe6d634279176b5358727d8f2cc1e65b65f43ce2f8bfb0"
 }
